UI: bugfix weekend page z-index

--- a/ui/source/assets/css/partial/_weekend.scss
+++ b/ui/source/assets/css/partial/_weekend.scss
@@ -10,6 +10,7 @@
 	bottom:46px;
 	width:100%;
 	background:$onyx-light;
+	z-index:9999;
 
 	.weekend-info {
 		@include flexbox();
